gforge (4.8.52-1) experimental; urgency=low

  * bump to new version because on binary commit
  * put debian postinst/prerm/config/.. files in dsf-in dir

 -- Christian Bayle <bayle@debian.org>  Wed, 03 Jun 2009 22:49:58 +0200

gforge (4.8.51-1) experimental; urgency=low

  * Fixed blackhole syntax for gforge-mta-exim4 so as not to require
    file_transport.
  * New extratabs plugin from Adullact.
  * New globalsearch plugin allowing to publish lists of projects for
    other forges and to search for projects in remote forges.
  * New projectlabels plugin from Adullact.
  * Packaging-related files are now stored in
    gforge/packaging/{dirs,install,cron.d,control}/* rather than the
    previous gforge/{dirs,install,cron.d,control}/*.
  * Read sys_urlprefix from gforge.conf and use it for local.inc and in
    the Apache config.  This makes it possible to run FusionForge as
    http://<hostname>/forge/ with unmodified packages.

 -- Roland Mas <lolando@debian.org>  Wed, 29 Apr 2009 15:21:31 +0200
  
gforge (4.8~rc2-1) experimental; urgency=low

  * New upstream release candidate.
  * Fixed path to install-svn.sh in -plugin-scmsvn's postinst and prerm.

 -- Roland Mas <lolando@debian.org>  Mon, 18 May 2009 11:24:58 +0200

gforge (4.8~rc1-2) experimental; urgency=low

  * New upstream snapshot.
  * install-chroot.sh: do not fail if device nodes can't be created (such
    as when operating in a vserver).
  * Fixed crontab syntax for -db-postgresql (cron doesn't interpolate the
    user column itself).

 -- Roland Mas <lolando@debian.org>  Mon, 04 May 2009 22:16:11 +0200

gforge (4.8~rc1-1) experimental; urgency=low

  [ Christian Bayle ]
  * Removed all files from /usr/lib/gforge and put them in /usr/share/gforge
  * cron scripts ar now in /usr/share/gforge/cronjobs
  * Now generate *.cron.d *.dirs *.install from cron.d/dirs/install dirs
  * Use dh_install instead of copy in rules

  [ Roland Mas ]
  * Fixed a bunch of lintian warnings.